# spatial-pf2

./: README.md  makefile  pyproject.toml
.github/workflows/: build.yml  test.yml
spatialpf2/: imports.py
spatialpf2/figures/: common.py  figure1.py  figure2.py  figureSpatial2.py  figureSpatial3.py  figureSpatial4.py
spatialpf2/figures/commonFuncs/: plotFactors.py
