[tool.poetry]
name = "spatialpf2"
version = "0.0.0"
description = "Spatial data analysis using PARAFAC2."
authors = ["Andrew Ramirez", "Nathaniel Thomas", "Breanna Remigio", "Aaron Meyer <git@asmlab.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26"
scipy = "^1.12"
scikit-learn = "^1.4"
seaborn = "^0.13.2"
pandas = "^2.2.1"
tensorly = "0.8.1"
parafac2 = { git = "https://github.com/meyer-lab/parafac2.git", rev = "b0bf58fd3b285d5cf6e598ccd254f7df04c083b9" }
h5netcdf = "^1.3"
anndata = "^0.10.3"
datashader = "^0.16"
gseapy = "^1.1"
scanpy = "^1.10"
pacmap = "^0.7.1"
leidenalg = "^0.10.1"
tqdm = "^4.66.1"
tlviz = "^0.1.1"
doubletdetection = "^4.2"
statsmodels = "^0.14.1"
dask = {extras = ["dataframe"], version = "^2024.3.1"}
ruff = "^0.4.2"