[project]
name = "spatialpf2"
version = "0.1.0"
description = "Spatial data analysis using PARAFAC2."
authors = [{name = "Nathaniel Thomas"}, {name="Breanna Remigio"}, {name = "Andrew Ramirez"}, {name="Aaron Meyer", email = "git@asmlab.org"}]
license = "MIT"
requires-python = ">= 3.11, <= 3.13"


dependencies = [
    "pandas>=2.1.3",
    "scanpy>=1.9.6",
    "matplotlib>=3.9",
    "scikit-learn>=1.5",
    "tensorly>=0.8.1",
    "numpy>=1.26.2",
    "parafac2 @ git+https://github.com/meyer-lab/parafac2.git@793f8ad06791ffcc698105d80941774741722574",
    "pacmap>=0.7.3",
    "anndata>=0.10.3",
    "tlviz>=0.1.1",
    "datashader>=0.16.2",
    "dask[dataframe]>=2024.5.0",
    "setuptools>=69.5",
    "doubletdetection>=4.2",
    "networkx>=3.3"
]


readme = "README.md"

[project.scripts]
fbuild = "spatialpf2.figures.common:genFigure"
factor = "spatialpf2.imports:factorSave"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["spatialpf2"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Unused arguments
    "ARG",
]
